@@ -1,4 +1,4 @@
-# Copyright (C) 2020 Free Software Foundation, Inc.
+# Copyright (C) 2020, 2022 Free Software Foundation, Inc.
 #
 # This file is part of DejaGnu.
 #
@@ -22,7 +22,7 @@ load_lib dejagnu.exp
 
 if { [info exists STATS_TEST] } {
     host_execute [which awk] -f [testsuite file -source -test unit-sub.awk] \
-	UNIT_RESULT=$STATS_TEST /dev/null
+	ECNT=$ERROR_COUNT WCNT=$WARNING_COUNT UNIT_RESULT=$STATS_TEST /dev/null
 }
 # Solaris 10 /usr/bin/awk needs /dev/null actually passed on the command
 # line, but will run unit-sub.awk without problems if that is done.
